Fixed overflow-y problem

--- a/src/content/about/about.css
+++ b/src/content/about/about.css
@@ -46,12 +46,3 @@
   top: 0;
   z-index: 1;
 }
-
-/* #aboutHolder {
-  display: flex;
-  algin-content: center;
-  justify-content: center;
-  height: 90vh;
-  margin-bottom: 10vh;
-  min-height: ;
-} */
