--- a/src/homePage/homePage.css
+++ b/src/homePage/homePage.css
@@ -1,5 +1,5 @@
 #homePage {
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   padding: 0;
   margin: 0;
